# Inara_V2

./: .env.example  .gitignore  README.md  chainlit.md  chainlit_en-US.md  pyproject.toml  run_conversation.py  run_query.py  test_memory.py
.chainlit/: config.toml
data/Master-Document/: master_actions.md
data/Regular-Employee-Documents/: employee_handbook.md
public/: custom.css
src/hr_bot/: __init__.py  main.py
src/hr_bot/config/: __init__.py  agents.yaml  settings.py
src/hr_bot/deep_agents/: __init__.py  manager.py
src/hr_bot/deep_agents/subagents/: __init__.py  general_subagent.py  hr_subagent.py
src/hr_bot/tools/: __init__.py  finance_search_tool.py  hr_rag_tool.py  master_actions_tool.py
src/hr_bot/ui/: __init__.py  app.py  chainlit_app.py
src/hr_bot/utils/: __init__.py  cache.py  content_safety.py  domain_router.py  embeddings.py  memory.py  response_formatter.py  s3_loader.py
storage/indexes/hr_rag/: bm25_index.pkl
storage/indexes/hr_rag/faiss_index/: index.faiss  index.pkl
storage/indexes/master_actions/: bm25_index.pkl
storage/indexes/master_actions/faiss_index/: index.faiss  index.pkl
storage/memory/: conversation_memory.db-shm  conversation_memory.db-wal
tests/: __init__.py  test_hr_bot.py
